--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include 'desktop', 'core', 'server', 'ios', 'annotations', 'tools', 'tests'
+include 'desktop', 'core', 'server', 'ios', 'annotations', 'tools', 'tests', 'steam'
 
 def use = { String name ->
     include(name)
